# AI-Operations-Optimizer

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/app/: celery_app.py  main.py
backend/app/agents/: tasks.py
backend/app/api/: auth.py  ingest.py  metrics.py  projects.py  suggestions.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: db.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  68ccf8d20324_initial_clean.py  b3e9f1a02c47_add_suggestion_mode.py
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/dashboard/hotspots/: page.tsx
dashboard/src/app/dashboard/settings/: page.tsx
dashboard/src/app/dashboard/suggestions/: page.tsx
dashboard/src/lib/: api.ts
sdk/: README.md  pyproject.toml
sdk/llm_monitor/: context.py  monitor.py  pricing.py  shipper.py  wrappers.py
sdk/tests/: test_sdk.py
