[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-monitor-sdk"
version = "0.1.0"
description = "Lightweight SDK for LLM cost & latency monitoring"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
    "wrapt>=1.16.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_monitor*"]
